Trigger Heroku deploy after enabling collectstatic

--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "request": "^2.88.2",
-    "dotenv": "^8.2.0"
+    "request": "^2.88.2"
   },
   "devDependencies": {
-
+    "dotenv": "^8.2.0"
   }
 }
