--- a/package.json
+++ b/package.json
@@ -17,7 +17,5 @@
     "morgan": "~1.9.1",
     "request": "^2.88.2"
   },
-  "devDependencies": {
-    "dotenv": "^8.2.0"
-  }
+  "devDependencies": {}
 }
