--- a/package.json
+++ b/package.json
@@ -17,5 +17,7 @@
     "morgan": "~1.9.1",
     "request": "^2.88.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "dotenv": "^8.2.0"
+  }
 }
